--- a/landscapeProject.css
+++ b/landscapeProject.css
@@ -17,3 +17,35 @@
 	text-shadow: 2px 2px 4px #000000;
 	font-size: 55px;
 }
+
+.menuBar{
+	position:absolute;
+	width:100%;
+	height: 25%;
+	background-image: linear-gradient(to bottom right, #faa628, #ebfaff);
+	margin-top: -1.5%;
+}
+
+.homePageLink{
+	position: absolute;
+	margin-left: 1%;
+}
+
+.contactPageLink{
+	position: absolute;
+	margin-left: 45%;
+}
+
+.lawnMowingPageLink{
+	position: absolute;
+	margin-left: 90%;
+}
+
+.gardeningImage1{
+	position: absolute;
+	margin-top: 5%;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	padding: 5px;
+	width: 30%;
+}
