change line 68-70 to annotation

--- a/landscapeProject.css
+++ b/landscapeProject.css
@@ -67,7 +67,11 @@ head { color:#E0E0E7;
 
 /*p{
   font-size:20pt;
-}*/
+}
+
+This is too general, it is interfering with my code
+*/
+
 ul{
   font-size:20pt;
 }
